tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__SyntheticElvenGa-V76lvP8lSsewcKfwxHirPw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 18385183275665107775,
  "prerequisites": [
    1680,
    3230
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Synthetic Elven Gateway is an advanced and easily automatable version of the normal Elven Gateway. As a result it is much quicker, less TPS intensive, and AE2 compatible.\n\nMuch like the Mana Fountain, the controller can be given mana via a mana spreader or spark & item input can happen from any face, while item output is restricted to the bottom.\n\n[note]While running, this uses more mana passively than a normal Elven Gateway does, so be sure you have adequate mana production![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Synthetic Elven Gateway",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1680,
    3230
  ],
  "rewards": [],
  "tasks": []
}
