tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__TheEverlastingGu-cejGOPB2QiuW5833Z5ontA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17327109370543744948,
  "prerequisites": [
    14163329716812610545
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mana for all of your needs, endless amounts of mana. ",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Everlasting Guilty Pool",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    14163329716812610545
  ],
  "rewards": [],
  "tasks": []
}
