tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__Upgradingyourman-AAAAAAAAAAAAAAAAAAAMmA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3224,
  "prerequisites": [
    241,
    3252
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have discovered the power of the magically enchanted crucible, you can use that technology to make a better mana pool.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Upgrading Your Mana Pool",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    241,
    3252
  ],
  "rewards": [],
  "tasks": []
}
